--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^11.11.17",
     "next": "14.2.16",
     "next-auth": "^4.24.10",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4"
