--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@tabler/icons-react": "^3.22.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
     "next": "14.2.16",
     "next-auth": "^4.24.10",
