--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.22.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
